css/style.css
/* Reset */

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

* {
    margin: 0;
    padding: 0;
}

/* Body */

body {
    font-family: "Libertinus Serif", "Source Sans 3", sans-serif;
    background-color: rgba(211, 211, 211, 0.521);
    font-size: 20px;
    padding: 5px 35px;
    color: #12171f;
}

/* Top Links */ 

.top-links {
}

.top-links .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.top-links .logo {
}

.top-links .pages {
    list-style-type: none;
    display: flex;
    padding-bottom: 10px;
    gap: 30px;
    font-size: 18px;
    cursor: pointer;
}

.top-links a {
    text-decoration: none;
    color: #000000;
    font-weight: 600;
}

/* Header */ 

.header { 

}

.header .container {
    max-width: 1000px;
    margin: 50px auto;
}

.header .update {
    display: inline flex;
    border: 1px solid #000000;
    border-radius: 30px;
    padding: 20px 30px;
    margin-bottom: 1em;
    max-width: 400px;
    background-color: #12171f;
    color: rgba(211, 211, 211, 0.973);
    font-family: "Source Sans 3", "Libertinus Serif", sans-serif;
    font-size: 18px;
    position: relative;
}

.header .update .label {
    position: absolute;
    display: inline-block;
    z-index: 1;  /* label stays above */
    top: -16px; 
    left: 8%;
    background-color: white;
    border: 2px solid #12171f;
    border-radius: 50px;
    padding: 4px 20px;
    color: #12171f;
    font-weight: 500;
    font-size: 16px;
}

.header .title {

}

.header .description {

}

.header .button {

}

